@startuml UML
class Course {
  - code : String
  - name : String
  - maxCapacity : int
  + Course(code:String, name:String, maxCapacity:int)
  + addStudent(student:Student, key:Integer) : void
  + removeStudent(Integer key) : void
}

class Student {
  - id : String
  - name : String
  - email : String
  + Student(id:String, name:String, email:String)
  + addCourse(Course course, key:Integer) : void
  + removeCourse(Integer key) : void
}

class CourseService {
  + addCourse(course:Course) : void
  + createCourse(code:String, name:String, capacity:int) : Course
  + listCourses() : List<Course>
  + findCourseByCode(code:String) : Course
  + findCourseByName(name:String) : Course
  + enrollStudent(student:Student, course:Course) : void
  + removeStudentFromCourse(course:Course, student:Student)
  + setNewName(course : Course, name : String) : void
  + setNewCapacity(course : Course, capacity : String)
  + listStudentsByCourse(course:Course) : List<Student>
  + isNameAvailable(name: Sting) : Boolean
  + hasNotCourse() : Boolean
}

class StudentService {
  + createStudent(name:String, email:String) : Student
  + findStudentById(id:String) : Student
  + findStudentByName(name:String) : Student
  + addStudent(student:Student) : void
  + listCoursesByStudent(student:Student) : List<Course>
  + listStudents() : List<Student>
  + removeCourseFromStudent(student: Student, course:Course) : void
  + setNewName(student : Student, name : String) : void
  + setNewEmail(student : Student, email : String) : void
  + isNameAvailable(name: Sting) : Boolean
  + isEmailAvailable(email: Sting) : Boolean
  + hasNotStudent() : Boolean
}

class Validator <<final>> {
  - Validator()
  + isValidName(name:String) : boolean
  + isValidEmail(email:String) : boolean
  + isValidCapacity(capacity:String) : boolean
  + createId() : String
}

class CourseController {
  + createCourse() : void
  + searchCourse() : void
  + listCourses() : void
  + changeNameCourse() : void
  + changeCapacityCourse() : void
  + enrollStudent(studentcontroller: StudentController) : void
  + removeStudentFromCourse() : void
  + listStudentsByCourse() : void
}

class StudentController {
  + createStudent() : void
  + searchStudent() : void
  + listStudents() : void
  + changeNameStudent() : void
  + changeEmailStudent() : void
  + removeCourseFromStudent() : void
  + listCoursesByStudent() : void
}

class MenuApp {
    +start()
    -showMenu()
    -handleOption(option: int)
}



Course "*" --left-- "*" Student
CourseService "1" --left--> "*" Course
StudentService "1" --down---> "*" Student
CourseController -down-> CourseService
StudentController -left-> StudentService
MenuApp -right-> CourseController
MenuApp -left-> StudentController
CourseService .up.> Validator
StudentService ..> Validator

@enduml